[package]
name = "lt-dash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
lazy_static = "1.4.0"
serde = {version = "1.0.203", features=["derive"]}
serde_json = "1.0.117"
tokio = {version = "1.37.0", features=["rt-multi-thread"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
