[package]
name = "lt-dash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
axum = { version = "0.7.5", features = ["ws"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
axum_static = "1.7.1"
chrono = "0.4.38"
futures = "0.3.30"
lazy_static = "1.4.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.18"
sysinfo = "0.30.12"
